--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,16 +1,23 @@
 trigger:
-- main
+  - main
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: ubuntu-latest
 
-jobs:
-- job: PushToGitHub
-  steps:
+steps:
   - script: |
-      git config --global user.email "israel@mwg.digital"
-      git config --global user.name "Israel Melicio"
-      git remote add github https://github.com/MWG-Digital/backend-log.git
-      git push github HEAD:main
+      git config user.name "MWG Bot 🤖"
+      git config user.email "cloud@mwg.digital"
+    displayName: "Setup Git client"
+
+  - script: git remote add GitHub $(GITHUB_GIT_URL)
+    displayName: "Add GitHub repository"
+
+  - script: |
+      git checkout -b $(GITHUB_BRANCH_NAME)
+      git add .
+      git commit -m "GITHUB code transport"
+      git -c http.extraHeader="Authorization: Basic $GITHUB_TOKEN" push --set-upstream GitHub $(GITHUB_BRANCH_NAME)
+    displayName: "Commit and push to GitHub Git"
     env:
-      GH_TOKEN: $(GITHUB_TOKEN)
+      GITHUB_TOKEN: $(GITHUB_TOKEN)
