--- a/package.json
+++ b/package.json
@@ -11,5 +11,12 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/MWG-Digital/backend-log.git"
+  },
+  "devDependencies": {
+    "eslint": "^8.51.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.2.0",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
